# trading-engine

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: main.py
app-original/: agent.py  config.py  db.py  main.py  risk.py  scanner.py  schemas.py  validator.py
app-original/tests/: test_pipeline.py
app/api/: broker.py  events.py  health.py  market.py
app/broker/: alpaca.py  service.py
app/core/: config.py  database.py
app/market/: scanner.py
app/market/providers/: alpaca.py  base.py
app/models/: event.py
app/schemas/: broker.py  event.py  market.py  scanner.py
migrations/: env.py
migrations/versions/: 45632254ac63_create_system_events_table.py
tests/: test_scanner.py
