[project]
name = "trading-engine-phase1"
version = "0.1.0"
description = "Agentic-deterministic hybrid trading engine scaffold"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "openai>=1.95,<2",
  "alembic>=1.16,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "httpx>=0.28,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]
